PROJECT( ${LIB_NAME} )

SET( LIBRARY_OUTPUT_PATH ${BIN_PATH}/${CMAKE_BUILD_TYPE} )

INCLUDE_DIRECTORIES(
        include
        ${EXT_INCLUDE_DIR}
)

LINK_DIRECTORIES(
    ${EXT_LIB_DIR}
)

if( WIN32 )
ADD_DEFINITIONS(
	-DDLLEXPORT
)
endif()

SET( inc_root ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include/YAPOG )
SET( src_root ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/src/YAPOG )
SET( pgstream_inc_root ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include/pgstream )
SET( pgstream_src_root ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/src/pgstream )
SET(
source_files
${pgstream_inc_root}/pgstream.hpp
${pgstream_src_root}/pgstream.cpp

${inc_root}/Audio/AudioManager.hpp
${src_root}/Audio/AudioManager.cpp

${inc_root}/Collection/Array.hpp
${inc_root}/Collection/Array.hxx
${inc_root}/Collection/List.hpp
${inc_root}/Collection/List.hxx
${inc_root}/Collection/Map.hpp
${inc_root}/Collection/Map.hxx
${inc_root}/Collection/Matrix.hpp
${inc_root}/Collection/Matrix.hxx
${inc_root}/Collection/Queue.hpp
${inc_root}/Collection/Queue.hxx
${inc_root}/Collection/Set.hpp
${inc_root}/Collection/Set.hxx

${inc_root}/Content/ContentManager.hpp
${src_root}/Content/ContentManager.cpp

${inc_root}/Game/Factory/ICloneable.hpp
${inc_root}/Game/Factory/ILoadable.hpp
${inc_root}/Game/Factory/IIDLoadable.hpp
${inc_root}/Game/Factory/IObjectIDLoader.hpp
${inc_root}/Game/Factory/IObjectLoader.hpp
${inc_root}/Game/Factory/ObjectFactory.hpp
${inc_root}/Game/Factory/ObjectFactory.hxx
${src_root}/Game/Factory/ObjectFactory.cpp
${inc_root}/Game/Factory/XmlObjectIDLoader.hpp
${inc_root}/Game/Factory/XmlObjectIDLoader.hxx
${inc_root}/Game/Factory/XmlObjectLoader.hpp
${inc_root}/Game/Factory/XmlObjectLoader.hxx

${inc_root}/Game/ID.hpp
${src_root}/Game/ID.cpp
${inc_root}/Game/IUpdateable.hpp
${inc_root}/Game/World/Map/Character.hpp
${src_root}/Game/World/Map/Character.cpp
${inc_root}/Game/World/Map/CharacterReader.hpp
${src_root}/Game/World/Map/CharacterReader.cpp

${inc_root}/Game/Chat/ChanManager.hpp
${src_root}/Game/Chat/ChanManager.cpp
${inc_root}/Game/Chat/Chat.hpp
${src_root}/Game/Chat/Chat.cpp
${inc_root}/Game/Chat/ChatCommand.hpp
${src_root}/Game/Chat/ChatCommand.cpp
${inc_root}/Game/Chat/ChatDisplayer.hpp
${src_root}/Game/Chat/ChatDisplayer.cpp
${inc_root}/Game/Chat/ChatHeader.hpp
${inc_root}/Game/Chat/ChatManager.hpp
${src_root}/Game/Chat/ChatManager.cpp
${inc_root}/Game/Chat/GameMessage.hpp
${src_root}/Game/Chat/GameMessage.cpp

${inc_root}/Game/World/Map/Direction.hpp
${inc_root}/Game/World/Map/MapArea.hpp
${src_root}/Game/World/Map/MapArea.cpp
${inc_root}/Game/World/Map/MapAreaReader.hpp
${src_root}/Game/World/Map/MapAreaReader.cpp
${inc_root}/Game/World/Map/DestructibleObject.hpp
${src_root}/Game/World/Map/DestructibleObject.cpp
${inc_root}/Game/World/Map/DynamicWorldObject.hpp
${src_root}/Game/World/Map/DynamicWorldObject.cpp
${inc_root}/Game/World/Map/DynamicWorldObjectCollection.hpp
${src_root}/Game/World/Map/DynamicWorldObjectCollection.cpp
${inc_root}/Game/World/Map/DynamicWorldObjectReader.hpp
${src_root}/Game/World/Map/DynamicWorldObjectReader.cpp
${inc_root}/Game/World/Map/Map.hpp
${src_root}/Game/World/Map/Map.cpp
${inc_root}/Game/World/Map/DestructibleObject.hpp
${src_root}/Game/World/Map/DestructibleObject.cpp
${inc_root}/Game/World/Map/DestructibleObjectReader.hpp
${src_root}/Game/World/Map/DestructibleObjectReader.cpp
${inc_root}/Game/World/Map/MapElement.hpp
${src_root}/Game/World/Map/MapElement.cpp
${inc_root}/Game/World/Map/MapElementReader.hpp
${src_root}/Game/World/Map/MapElementReader.cpp
${inc_root}/Game/World/Map/Teleporter.hpp
${src_root}/Game/World/Map/Teleporter.cpp
${inc_root}/Game/World/Map/TeleporterReader.hpp
${src_root}/Game/World/Map/TeleporterReader.cpp
${inc_root}/Game/World/Map/IMapEventCondition.hpp
${inc_root}/Game/World/Map/IMapEventAction.hpp
${inc_root}/Game/World/Map/IPlayer.hpp
${inc_root}/Game/World/Map/BaseMapEventAction.hpp
${src_root}/Game/World/Map/BaseMapEventAction.cpp
${inc_root}/Game/World/Map/MapEvent.hpp
${src_root}/Game/World/Map/MapEvent.cpp
${inc_root}/Game/World/Map/MapEventArgs.hpp
${src_root}/Game/World/Map/MapEventArgs.cpp
${inc_root}/Game/World/Map/MapEventContext.hpp
${src_root}/Game/World/Map/MapEventContext.cpp
${inc_root}/Game/World/Map/MapEventContextTriggerComparator.hpp
${src_root}/Game/World/Map/MapEventContextTriggerComparator.cpp
${inc_root}/Game/World/Map/MapEventManager.hpp
${src_root}/Game/World/Map/MapEventManager.cpp
${inc_root}/Game/World/Map/MapEventQueue.hpp
${src_root}/Game/World/Map/MapEventQueue.cpp
${inc_root}/Game/World/Map/AnyMapEventAction.hpp
${src_root}/Game/World/Map/AnyMapEventAction.cpp
${inc_root}/Game/World/Map/DestroyObjectMapEventAction.hpp
${src_root}/Game/World/Map/DestroyObjectMapEventAction.cpp
${inc_root}/Game/World/Map/TriggerBattleMapEventAction.hpp
${src_root}/Game/World/Map/TriggerBattleMapEventAction.cpp
${inc_root}/Game/World/Map/WarpMapEventAction.hpp
${src_root}/Game/World/Map/WarpMapEventAction.cpp
${inc_root}/Game/World/Map/Physics/MapEventInfo.hpp
${src_root}/Game/World/Map/Physics/MapEventInfo.cpp
${inc_root}/Game/World/Map/MapReader.hpp
${src_root}/Game/World/Map/MapReader.cpp
${inc_root}/Game/World/Map/BattleSpawnerArea.hpp
${src_root}/Game/World/Map/BattleSpawnerArea.cpp
${inc_root}/Game/World/Map/BattleSpawnerAreaReader.hpp
${src_root}/Game/World/Map/BattleSpawnerAreaReader.cpp
${inc_root}/Game/World/Map/OpenBattleSpawnerArea.hpp
${src_root}/Game/World/Map/OpenBattleSpawnerArea.cpp
${inc_root}/Game/World/Map/OpenBattleSpawnerAreaReader.hpp
${src_root}/Game/World/Map/OpenBattleSpawnerAreaReader.cpp

${inc_root}/Game/World/Map/Physics/BoundingBox.hpp
${src_root}/Game/World/Map/Physics/BoundingBox.cpp
${inc_root}/Game/World/Map/Physics/BoundingBoxCollection.hpp
${src_root}/Game/World/Map/Physics/BoundingBoxCollection.cpp
${inc_root}/Game/World/Map/Physics/EventBoundingBoxCollection.hpp
${src_root}/Game/World/Map/Physics/EventBoundingBoxCollection.cpp
${inc_root}/Game/World/Map/Physics/EventTriggerBoundingBoxCollection.hpp
${src_root}/Game/World/Map/Physics/EventTriggerBoundingBoxCollection.cpp
${inc_root}/Game/World/Map/Physics/PhysicsBoundingBoxCollection.hpp
${src_root}/Game/World/Map/Physics/PhysicsBoundingBoxCollection.cpp
${inc_root}/Game/World/Map/Physics/BoundingBoxReader.hpp
${src_root}/Game/World/Map/Physics/BoundingBoxReader.cpp
${inc_root}/Game/World/Map/Physics/BasicPhysicsCore.hpp
${src_root}/Game/World/Map/Physics/BasicPhysicsCore.cpp
${inc_root}/Game/World/Map/Physics/CharacterMoveController.hpp
${src_root}/Game/World/Map/Physics/CharacterMoveController.cpp
${inc_root}/Game/World/Map/Physics/CollidableArea.hpp
${src_root}/Game/World/Map/Physics/CollidableArea.cpp
${inc_root}/Game/World/Map/Physics/CollidableAreaCell.hpp
${src_root}/Game/World/Map/Physics/CollidableAreaCell.cpp
${inc_root}/Game/World/Map/Physics/ICollidable.hpp
${inc_root}/Game/World/Map/Physics/GridCollidableArea.hpp
${src_root}/Game/World/Map/Physics/GridCollidableArea.cpp
${inc_root}/Game/World/Map/Physics/MapCollidableInfo.hpp
${src_root}/Game/World/Map/Physics/MapCollidableInfo.cpp
${inc_root}/Game/World/Map/Physics/ForceToVelocityPhysicsCore.hpp
${src_root}/Game/World/Map/Physics/ForceToVelocityPhysicsCore.cpp
${inc_root}/Game/World/Map/Physics/PhysicsCore.hpp
${src_root}/Game/World/Map/Physics/PhysicsCore.cpp
${src_root}/Game/World/Map/Physics/PersistentPhysicsCore.cpp
${inc_root}/Game/World/Map/Physics/PersistentPhysicsCore.hpp
${inc_root}/Game/World/Map/Physics/WorldObjectMoveController.hpp
${src_root}/Game/World/Map/Physics/WorldObjectMoveController.cpp

${inc_root}/Game/World/Map/StaticWorldObject.hpp
${src_root}/Game/World/Map/StaticWorldObject.cpp
${inc_root}/Game/World/Map/StaticWorldObjectReader.hpp
${src_root}/Game/World/Map/StaticWorldObjectReader.cpp
${inc_root}/Game/World/Map/IStaticWorldObjectVisitor.hpp
${inc_root}/Game/World/Map/BaseStaticWorldObjectVisitor.hpp
${src_root}/Game/World/Map/BaseStaticWorldObjectVisitor.cpp
${inc_root}/Game/World/Map/IDynamicWorldObjectVisitor.hpp
${inc_root}/Game/World/Map/BaseDynamicWorldObjectVisitor.hpp
${src_root}/Game/World/Map/BaseDynamicWorldObjectVisitor.cpp
${inc_root}/Game/World/Map/IStaticWorldObjectConstVisitor.hpp
${inc_root}/Game/World/Map/BaseStaticWorldObjectConstVisitor.hpp
${src_root}/Game/World/Map/BaseStaticWorldObjectConstVisitor.cpp
${inc_root}/Game/World/Map/IDynamicWorldObjectConstVisitor.hpp
${inc_root}/Game/World/Map/BaseDynamicWorldObjectConstVisitor.hpp
${src_root}/Game/World/Map/BaseDynamicWorldObjectConstVisitor.cpp
${inc_root}/Game/World/Map/WorldObject.hpp
${src_root}/Game/World/Map/WorldObject.cpp
${inc_root}/Game/World/Map/WorldObjectState.hpp
${src_root}/Game/World/Map/WorldObjectState.cpp
${inc_root}/Game/World/Map/WorldObjectStateFactory.hpp
${src_root}/Game/World/Map/WorldObjectStateFactory.cpp
${inc_root}/Game/World/Map/WorldObjectReader.hpp
${src_root}/Game/World/Map/WorldObjectReader.cpp
${inc_root}/Game/World/Map/MapEventActionType.hpp
${inc_root}/Game/World/ISpatial3.hpp
${inc_root}/Game/World/Spatial3Info.hpp
${src_root}/Game/World/Spatial3Info.cpp
${inc_root}/Game/World/World.hpp
${src_root}/Game/World/World.cpp
${inc_root}/Game/World/World.hpp

${src_root}/Game/Pokemon/Pokemon.cpp
${inc_root}/Game/Pokemon/Pokemon.hpp
${src_root}/Game/Pokemon/PokemonInfo.cpp
${inc_root}/Game/Pokemon/PokemonInfo.hpp
${src_root}/Game/Pokemon/PokemonInfoReader.cpp
${inc_root}/Game/Pokemon/PokemonInfoReader.hpp
${src_root}/Game/Pokemon/TypeInfoReader.cpp
${inc_root}/Game/Pokemon/TypeInfoReader.hpp
${src_root}/Game/Pokemon/TypeInfo.cpp
${inc_root}/Game/Pokemon/TypeInfo.hpp
${src_root}/Game/Pokemon/PokemonType.cpp
${inc_root}/Game/Pokemon/PokemonType.hpp
${inc_root}/Game/Pokemon/Gender.hpp
${inc_root}/Game/Pokemon/PokemonStatus.hpp
${src_root}/Game/Pokemon/SkillInfoReader.cpp
${inc_root}/Game/Pokemon/SkillInfoReader.hpp
${src_root}/Game/Pokemon/SkillInfo.cpp
${inc_root}/Game/Pokemon/SkillInfo.hpp
${src_root}/Game/Pokemon/PokemonMove.cpp
${inc_root}/Game/Pokemon/PokemonMove.hpp
${src_root}/Game/Pokemon/PokemonStat.cpp
${inc_root}/Game/Pokemon/PokemonStat.hpp
${src_root}/Game/Pokemon/BaseStat.cpp
${inc_root}/Game/Pokemon/BaseStat.hpp
${src_root}/Game/Pokemon/HitPoint.cpp
${inc_root}/Game/Pokemon/HitPoint.hpp
${src_root}/Game/Pokemon/Attack.cpp
${inc_root}/Game/Pokemon/Attack.hpp
${src_root}/Game/Pokemon/Defense.cpp
${inc_root}/Game/Pokemon/Defense.hpp
${src_root}/Game/Pokemon/Speed.cpp
${inc_root}/Game/Pokemon/Speed.hpp
${src_root}/Game/Pokemon/SpecialAttack.cpp
${inc_root}/Game/Pokemon/SpecialAttack.hpp
${src_root}/Game/Pokemon/SpecialDefense.cpp
${inc_root}/Game/Pokemon/SpecialDefense.hpp
${src_root}/Game/Pokemon/Ability.cpp
${inc_root}/Game/Pokemon/Ability.hpp
${src_root}/Game/Pokemon/NatureInfoReader.cpp
${inc_root}/Game/Pokemon/NatureInfoReader.hpp
${src_root}/Game/Pokemon/NatureInfo.cpp
${inc_root}/Game/Pokemon/NatureInfo.hpp
${src_root}/Game/Pokemon/Gender.cpp
${inc_root}/Game/Pokemon/Gender.hpp
${src_root}/Game/Pokemon/PokemonExperience.cpp
${inc_root}/Game/Pokemon/PokemonExperience.hpp
${inc_root}/Game/Pokemon/ExperienceType.hpp
${src_root}/Game/Pokemon/ExperienceFast.cpp
${inc_root}/Game/Pokemon/ExperienceFast.hpp
${src_root}/Game/Pokemon/ExperienceErratic.cpp
${inc_root}/Game/Pokemon/ExperienceErratic.hpp
${src_root}/Game/Pokemon/ExperienceFluctuating.cpp
${inc_root}/Game/Pokemon/ExperienceFluctuating.hpp
${src_root}/Game/Pokemon/ExperienceSlow.cpp
${inc_root}/Game/Pokemon/ExperienceSlow.hpp
${src_root}/Game/Pokemon/ExperienceMediumSlow.cpp
${inc_root}/Game/Pokemon/ExperienceMediumSlow.hpp
${src_root}/Game/Pokemon/ExperienceMediumFast.cpp
${inc_root}/Game/Pokemon/ExperienceMediumFast.hpp
${src_root}/Game/Pokemon/PokemonTeam.cpp
${inc_root}/Game/Pokemon/PokemonTeam.hpp

${src_root}/Game/Battle/BattleCore.cpp
${inc_root}/Game/Battle/BattleCore.hpp
${src_root}/Game/Battle/TrainerBattle.cpp
${inc_root}/Game/Battle/TrainerBattle.hpp
${src_root}/Game/Battle/PokemonFighter.cpp
${inc_root}/Game/Battle/PokemonFighter.hpp
${src_root}/Game/Battle/Battle.cpp
${inc_root}/Game/Battle/Battle.hpp
${src_root}/Game/Battle/PlayerTrainer.cpp
${inc_root}/Game/Battle/PlayerTrainer.hpp
${inc_root}/Game/Battle/IBattleEntity.hpp
${src_root}/Game/Battle/PokemonFighterTeam.cpp
${inc_root}/Game/Battle/PokemonFighterTeam.hpp

${src_root}/Game/Battle/Phase/ActionPhase.cpp
${inc_root}/Game/Battle/Phase/ActionPhase.hpp
${src_root}/Game/Battle/Phase/ActionPhaseArgs.cpp
${inc_root}/Game/Battle/Phase/ActionPhaseArgs.hpp
${src_root}/Game/Battle/Phase/BattlePhase.cpp
${inc_root}/Game/Battle/Phase/BattlePhase.hpp
${src_root}/Game/Battle/Phase/BattlePhaseManager.cpp
${inc_root}/Game/Battle/Phase/BattlePhaseManager.hpp
${inc_root}/Game/Battle/Phase/BattlePhaseState.hpp
${src_root}/Game/Battle/Phase/BeginBattlePhase.cpp
${inc_root}/Game/Battle/Phase/BeginBattlePhase.hpp
${src_root}/Game/Battle/Phase/BeginTurnPhase.cpp
${inc_root}/Game/Battle/Phase/BeginTurnPhase.hpp
${src_root}/Game/Battle/Phase/EndBattlePhase.cpp
${inc_root}/Game/Battle/Phase/EndBattlePhase.hpp
${src_root}/Game/Battle/Phase/EndTurnPhase.cpp
${inc_root}/Game/Battle/Phase/EndTurnPhase.hpp
${src_root}/Game/Battle/Phase/PhaseArgs.cpp
${inc_root}/Game/Battle/Phase/PhaseArgs.hpp
${src_root}/Game/Battle/Phase/SelectionPhase.cpp
${inc_root}/Game/Battle/Phase/SelectionPhase.hpp
${src_root}/Game/Battle/Phase/EndPokemonSwitchPhase.cpp
${inc_root}/Game/Battle/Phase/EndPokemonSwitchPhase.hpp
${src_root}/Game/Battle/Phase/RunPhase.cpp
${inc_root}/Game/Battle/Phase/RunPhase.hpp
${src_root}/Game/Battle/Phase/RunWildBattlePhase.cpp
${inc_root}/Game/Battle/Phase/RunWildBattlePhase.hpp

${inc_root}/Graphics/Camera.hpp
${src_root}/Graphics/Camera.cpp
${inc_root}/Graphics/CameraController.hpp
${src_root}/Graphics/CameraController.cpp
${inc_root}/Graphics/CenteredCameraController.hpp
${src_root}/Graphics/CenteredCameraController.cpp
${inc_root}/Graphics/DrawingContext.hpp
${src_root}/Graphics/DrawingContext.cpp
${inc_root}/Graphics/ICamera.hpp
${inc_root}/Graphics/IDrawable.hpp
${inc_root}/Graphics/IDrawingContext.hpp
${inc_root}/Graphics/ISpatial.hpp
${inc_root}/Graphics/ProgressiveCameraController.hpp
${src_root}/Graphics/ProgressiveCameraController.cpp
${inc_root}/Graphics/RectReader.hpp
${inc_root}/Graphics/RectReader.hxx
${inc_root}/Graphics/RectWriter.hpp
${inc_root}/Graphics/RectWriter.hxx
${inc_root}/Graphics/SpatialInfo.hpp
${src_root}/Graphics/SpatialInfo.cpp
${inc_root}/Graphics/Texture.hpp
${src_root}/Graphics/Texture.cpp
${inc_root}/Graphics/TextureReader.hpp
${src_root}/Graphics/TextureReader.cpp
${inc_root}/Graphics/Vector2.hpp
${src_root}/Graphics/Vector2.cpp

${inc_root}/Graphics/Game/World/IWorldDrawingPolicy.hpp
${inc_root}/Graphics/Game/World/WorldDrawingPolicy.hpp
${src_root}/Graphics/Game/World/WorldDrawingPolicy.cpp
${inc_root}/Graphics/Game/World/RegularWorldDrawingPolicy.hpp
${src_root}/Graphics/Game/World/RegularWorldDrawingPolicy.cpp
${inc_root}/Graphics/Game/World/IsometricWorldDrawingPolicy.hpp
${src_root}/Graphics/Game/World/IsometricWorldDrawingPolicy.cpp

${inc_root}/Graphics/Game/Game.hpp
${src_root}/Graphics/Game/Game.cpp
${inc_root}/Graphics/Game/GameScreen.hpp
${src_root}/Graphics/Game/GameScreen.cpp
${inc_root}/Graphics/Game/GameScreenManager.hpp
${src_root}/Graphics/Game/GameScreenManager.cpp
${inc_root}/Graphics/Game/IGame.hpp
${inc_root}/Graphics/Game/IGameScreen.hpp
${inc_root}/Graphics/Game/IGameScreenManager.hpp

${inc_root}/Graphics/Game/Sprite/AnimatedSprite.hpp
${src_root}/Graphics/Game/Sprite/AnimatedSprite.cpp
${inc_root}/Graphics/Game/Sprite/AnimatedSpriteReader.hpp
${src_root}/Graphics/Game/Sprite/AnimatedSpriteReader.cpp
${inc_root}/Graphics/Game/Sprite/AnyFrameSwitcher.hpp
${src_root}/Graphics/Game/Sprite/AnyFrameSwitcher.cpp
${inc_root}/Graphics/Game/Sprite/BaseSprite.hpp
${src_root}/Graphics/Game/Sprite/BaseSprite.cpp
${inc_root}/Graphics/Game/Sprite/BaseSpriteReader.hpp
${src_root}/Graphics/Game/Sprite/BaseSpriteReader.cpp
${inc_root}/Graphics/Game/Sprite/ComposedSprite.hpp
${src_root}/Graphics/Game/Sprite/ComposedSprite.cpp
${inc_root}/Graphics/Game/Sprite/DelayedFrameSwitcher.hpp
${src_root}/Graphics/Game/Sprite/DelayedFrameSwitcher.cpp
${inc_root}/Graphics/Game/Sprite/FrameSwitcher.hpp
${src_root}/Graphics/Game/Sprite/FrameSwitcher.cpp
${inc_root}/Graphics/Game/Sprite/HorizontalComposedSprite.hpp
${src_root}/Graphics/Game/Sprite/HorizontalComposedSprite.cpp
${inc_root}/Graphics/Game/Sprite/ISprite.hpp
${inc_root}/Graphics/Game/Sprite/RegularAnimatedSprite.hpp
${src_root}/Graphics/Game/Sprite/RegularAnimatedSprite.cpp
${inc_root}/Graphics/Game/Sprite/Sprite.hpp
${src_root}/Graphics/Game/Sprite/Sprite.cpp
${inc_root}/Graphics/Game/Sprite/SpriteReader.hpp
${src_root}/Graphics/Game/Sprite/SpriteReader.cpp
${inc_root}/Graphics/Game/Sprite/SpriteSet.hpp
${inc_root}/Graphics/Game/Sprite/SpriteSet.hxx
${inc_root}/Graphics/Game/Sprite/SpriteSetReader.hpp
${inc_root}/Graphics/Game/Sprite/SpriteSetReader.hxx
${inc_root}/Graphics/Game/Sprite/SquareComposedSprite.hpp
${src_root}/Graphics/Game/Sprite/SquareComposedSprite.cpp
${inc_root}/Graphics/Game/Sprite/VerticalComposedSprite.hpp
${src_root}/Graphics/Game/Sprite/VerticalComposedSprite.cpp

${inc_root}/Graphics/Game/World/Map/BasicTileLayoutHandler.hpp
${src_root}/Graphics/Game/World/Map/BasicTileLayoutHandler.cpp
${inc_root}/Graphics/Game/World/Map/DrawableWorldObjectOrderComparator.hpp
${src_root}/Graphics/Game/World/Map/DrawableWorldObjectOrderComparator.cpp
${inc_root}/Graphics/Game/World/Map/IDrawableWorldObject.hpp
${inc_root}/Graphics/Game/World/Map/IDrawableDynamicWorldObject.hpp
${inc_root}/Graphics/Game/World/Map/RandomTileLayoutHandler.hpp
${src_root}/Graphics/Game/World/Map/RandomTileLayoutHandler.cpp
${inc_root}/Graphics/Game/World/Map/RandomTileLayoutHandlerReader.hpp
${src_root}/Graphics/Game/World/Map/RandomTileLayoutHandlerReader.cpp
${inc_root}/Graphics/Game/World/Map/SelectionTileLayoutHandler.hpp
${src_root}/Graphics/Game/World/Map/SelectionTileLayoutHandler.cpp
${inc_root}/Graphics/Game/World/Map/SelectionTileLayoutHandlerReader.hpp
${src_root}/Graphics/Game/World/Map/SelectionTileLayoutHandlerReader.cpp
${inc_root}/Graphics/Game/World/Map/TileFamily.hpp
${src_root}/Graphics/Game/World/Map/TileFamily.cpp
${inc_root}/Graphics/Game/World/Map/Tile.hpp
${src_root}/Graphics/Game/World/Map/Tile.cpp
${inc_root}/Graphics/Game/World/Map/TileLayer.hpp
${src_root}/Graphics/Game/World/Map/TileLayer.cpp
${inc_root}/Graphics/Game/World/Map/TileLayerStack.hpp
${src_root}/Graphics/Game/World/Map/TileLayerStack.cpp
${inc_root}/Graphics/Game/World/Map/TileLayoutHandler.hpp
${src_root}/Graphics/Game/World/Map/TileLayoutHandler.cpp
${inc_root}/Graphics/Game/World/Map/TileLayoutHandlerReader.hpp
${src_root}/Graphics/Game/World/Map/TileLayoutHandlerReader.cpp
${inc_root}/Graphics/Game/World/Map/TileReader.hpp
${src_root}/Graphics/Game/World/Map/TileReader.cpp

${inc_root}/Graphics/Gui/BaseWidget.hpp
${src_root}/Graphics/Gui/BaseWidget.cpp
${inc_root}/Graphics/Gui/Label.hpp
${src_root}/Graphics/Gui/Label.cpp
${inc_root}/Graphics/Gui/LayoutBox.hpp
${src_root}/Graphics/Gui/LayoutBox.cpp
${inc_root}/Graphics/Gui/DialogBoxWidget.hpp
${src_root}/Graphics/Gui/DialogBoxWidget.cpp
${inc_root}/Graphics/Gui/MultiLabelWidget.hpp
${src_root}/Graphics/Gui/MultiLabelWidget.cpp
${inc_root}/Graphics/Gui/PartialLayoutManager.hpp
${src_root}/Graphics/Gui/PartialLayoutManager.cpp
${inc_root}/Game/Pokemon/Pokedex.hpp
${src_root}/Game/Pokemon/Pokedex.cpp
${inc_root}/Graphics/Gui/HorizontalLayout.hpp
${src_root}/Graphics/Gui/HorizontalLayout.cpp
${inc_root}/Graphics/Gui/VerticalLayout.hpp
${src_root}/Graphics/Gui/VerticalLayout.cpp
${inc_root}/Graphics/Gui/TextureManager.hpp
${src_root}/Graphics/Gui/TextureManager.cpp
${inc_root}/Graphics/Gui/PictureBox.hpp
${src_root}/Graphics/Gui/PictureBox.cpp
${inc_root}/Graphics/Gui/Menu.hpp
${inc_root}/Graphics/Gui/MenuItem.hpp
${src_root}/Graphics/Gui/MenuItem.cpp
${src_root}/Graphics/Gui/Menu.cpp
${inc_root}/Graphics/Gui/WidgetBackground.hpp
${src_root}/Graphics/Gui/WidgetBackground.cpp
${inc_root}/Graphics/Gui/TextBoxWidget.hpp
${src_root}/Graphics/Gui/TextBoxWidget.cpp
${inc_root}/Graphics/Gui/WidgetBorder.hpp
${src_root}/Graphics/Gui/WidgetBorder.cpp
${inc_root}/Graphics/Gui/Padding.hpp
${inc_root}/Graphics/Gui/GameInput/GameInputEntry.hpp
${src_root}/Graphics/Gui/GameInput/GameInputEntry.cpp
${inc_root}/Graphics/Gui/GameInput/GameInput.hpp
${src_root}/Graphics/Gui/GameInput/GameInput.cpp
${inc_root}/Graphics/Gui/GameInput/GameInputManager.hpp
${src_root}/Graphics/Gui/GameInput/GameInputManager.cpp
${inc_root}/Graphics/Gui/GameInput/GameInputReader.hpp
${src_root}/Graphics/Gui/GameInput/GameInputReader.cpp
${inc_root}/Graphics/Gui/GameInput/GameInputType.hpp
${inc_root}/Graphics/Gui/GameInput/KeyboardGameInputEntry.hpp
${src_root}/Graphics/Gui/GameInput/KeyboardGameInputEntry.cpp
${inc_root}/Graphics/Gui/GameInput/MouseGameInputEntry.hpp
${src_root}/Graphics/Gui/GameInput/MouseGameInputEntry.cpp
${inc_root}/Graphics/Gui/GuiEvent.hpp
${src_root}/Graphics/Gui/GuiEvent.cpp
${inc_root}/Graphics/Gui/GuiManager.hpp
${src_root}/Graphics/Gui/GuiManager.cpp
${inc_root}/Graphics/Gui/IEventHandler.hpp
${inc_root}/Graphics/Gui/IGuiManager.hpp
${inc_root}/Graphics/Gui/IWidget.hpp
${inc_root}/Graphics/Gui/GridMenu.hpp
${src_root}/Graphics/Gui/GridMenu.cpp

${inc_root}/Graphics/Gui/Game/GameWidget.hpp
${src_root}/Graphics/Gui/Game/GameWidget.cpp
${inc_root}/Graphics/Gui/Game/World/GameWorldWidget.hpp
${src_root}/Graphics/Gui/Game/World/GameWorldWidget.cpp
${inc_root}/Graphics/Gui/Game/World/GameWorldGuiManager.hpp
${src_root}/Graphics/Gui/Game/World/GameWorldGuiManager.cpp
${inc_root}/Graphics/Gui/Game/World/MapRootWidget.hpp
${src_root}/Graphics/Gui/Game/World/MapRootWidget.cpp

${inc_root}/Macros.hpp

${inc_root}/System/Configuration/ConfigurationReader.hpp
${src_root}/System/Configuration/ConfigurationReader.cpp
${inc_root}/System/Error/ContentLoadingFailException.hpp
${src_root}/System/Error/ContentLoadingFailException.cpp
${inc_root}/System/Error/Exception.hpp
${src_root}/System/Error/Exception.cpp
${inc_root}/System/Error/InvalidMethodCallException.hpp
${src_root}/System/Error/InvalidMethodCallException.cpp
${inc_root}/System/Error/DatabaseException.hpp
${src_root}/System/Error/DatabaseException.cpp
${inc_root}/System/Event/Event.hpp
${inc_root}/System/Event/Event.hxx
${inc_root}/System/IntTypes.hpp
${inc_root}/System/IComparator.hpp
${inc_root}/System/LessComparator.hpp
${inc_root}/System/LessComparator.hxx
${inc_root}/System/IO/BaseReaderConstVisitor.hpp
${src_root}/System/IO/BaseReaderConstVisitor.cpp
${inc_root}/System/IO/BaseReaderVisitor.hpp
${src_root}/System/IO/BaseReaderVisitor.cpp
${inc_root}/System/IO/BaseWriterConstVisitor.hpp
${src_root}/System/IO/BaseWriterConstVisitor.cpp
${inc_root}/System/IO/BaseWriterVisitor.hpp
${src_root}/System/IO/BaseWriterVisitor.cpp
${inc_root}/System/IO/IReaderConstVisitor.hpp
${inc_root}/System/IO/IReaderConstVisitor.hpp
${inc_root}/System/IO/IReader.hpp
${inc_root}/System/IO/IReaderVisitor.hpp
${inc_root}/System/IO/IWriterConstVisitor.hpp
${inc_root}/System/IO/IWriter.hpp
${inc_root}/System/IO/IWriterVisitor.hpp
${inc_root}/System/IO/Log/CountLoggerMode.hpp
${src_root}/System/IO/Log/CountLoggerMode.cpp
${inc_root}/System/IO/Log/DebugLogger.hpp
${src_root}/System/IO/Log/DebugLogger.cpp
${inc_root}/System/IO/Log/DatabaseLogger.hpp
${src_root}/System/IO/Log/DatabaseLogger.cpp
${inc_root}/System/IO/Log/Logger.hpp
${inc_root}/System/IO/Log/Logger.hxx
${src_root}/System/IO/Log/Logger.cpp
${inc_root}/System/IO/Log/LoggerMode.hpp
${src_root}/System/IO/Log/LoggerMode.cpp
${inc_root}/System/IO/Log/TimeLoggerMode.hpp
${src_root}/System/IO/Log/TimeLoggerMode.cpp
${inc_root}/System/IO/Xml/XmlHelper.hpp
${src_root}/System/IO/Xml/XmlHelper.cpp
${inc_root}/System/IO/Xml/XmlReaderCollection.hpp
${src_root}/System/IO/Xml/XmlReaderCollection.cpp
${inc_root}/System/IO/Xml/XmlReader.hpp
${src_root}/System/IO/Xml/XmlReader.cpp
${inc_root}/System/IO/Xml/XmlReaderVisitor.hpp
${src_root}/System/IO/Xml/XmlReaderVisitor.cpp
${inc_root}/System/IO/Xml/XmlTree.hpp
${inc_root}/System/IO/Xml/XmlTree.hxx
${src_root}/System/IO/Xml/XmlTree.cpp
${inc_root}/System/IO/Xml/XmlWriter.hpp
${src_root}/System/IO/Xml/XmlWriter.cpp
${inc_root}/System/IOStream.hpp
${inc_root}/System/MathHelper.hpp
${inc_root}/System/MathHelper.hxx
${inc_root}/System/Network/ClientSocket.hpp
${src_root}/System/Network/ClientSocket.cpp
${inc_root}/System/Network/IPacket.hpp
${inc_root}/System/Network/IPacketHandler.hpp
${inc_root}/System/Network/ISocket.hpp
${inc_root}/System/Network/NetworkHandler.hpp
${src_root}/System/Network/NetworkHandler.cpp
${inc_root}/System/Network/Packet.hpp
${inc_root}/System/Network/Packet.hxx
${src_root}/System/Network/Packet.cpp
${inc_root}/System/Network/PacketHandler.hpp
${src_root}/System/Network/PacketHandler.cpp
${inc_root}/System/Network/PacketType.hpp
${inc_root}/System/Network/ServerSocket.hpp
${src_root}/System/Network/ServerSocket.cpp
${inc_root}/System/Network/Socket.hpp
${src_root}/System/Network/Socket.cpp
${inc_root}/System/Path.hpp
${src_root}/System/Path.cpp
${inc_root}/System/RandomHelper.hpp
${src_root}/System/RandomHelper.cpp
${inc_root}/System/StringHelper.hpp
${inc_root}/System/StringHelper.hxx
${src_root}/System/StringHelper.cpp
${inc_root}/System/StringFilter.hpp
${src_root}/System/StringFilter.cpp
${inc_root}/System/String.hpp
${inc_root}/System/Time/DateTimeHelper.hpp
${src_root}/System/Time/DateTimeHelper.cpp
${inc_root}/System/Time/DateTime.hpp
${src_root}/System/Time/DateTime.cpp
${inc_root}/System/Thread/Thread.hpp
${inc_root}/System/Thread/Thread.hxx
${src_root}/System/Thread/Thread.cpp
${inc_root}/System/Time/Time.hpp
${src_root}/System/Time/Time.cpp
${inc_root}/System/Time/Timer.hpp
${src_root}/System/Time/Timer.cpp
${inc_root}/System/Time/UpdateableTimer.hpp
${src_root}/System/Time/UpdateableTimer.cpp
${inc_root}/System/Hash/FileChecker.hpp
${src_root}/System/Hash/FileChecker.cpp
${inc_root}/System/Hash/Md5.hpp
${src_root}/System/Hash/Md5.cpp

${pgstream_inc_root}/pgstream.hpp
${pgstream_src_root}/pgstream.cpp

${inc_root}/Database/DatabaseManager.hpp
${src_root}/Database/DatabaseManager.cpp
${inc_root}/Database/DatabaseStream.hpp
${inc_root}/Database/DatabaseStream.hxx
${src_root}/Database/DatabaseStream.cpp
${inc_root}/Database/DatabaseTransaction.hpp
${src_root}/Database/DatabaseTransaction.cpp
)

ADD_LIBRARY(
	${PROJECT_NAME}
	SHARED
	${source_files}
)

TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}
	${link_lib}
)

if( WIN32 )
ADD_CUSTOM_COMMAND(
	TARGET
	${PROJECT_NAME}
	POST_BUILD
	COMMAND copy ARGS \$\(CodeAnalysisInputAssembly\) \$\(SolutionDir\)YAPOG.Client\\bin\\\$\(Configuration\)
	COMMAND copy ARGS \$\(CodeAnalysisInputAssembly\) \$\(SolutionDir\)YAPOG.Server\\bin\\\$\(Configuration\)
	COMMENT "Copy the YAPOG DLL file in the good directory !"
)

#Replace / by \ for the source path
STRING(
	REGEX
	REPLACE
	"/"
	"\\\\"
	CMAKE_SOURCE_DIR_VS
	"${CMAKE_SOURCE_DIR}"
)

ADD_CUSTOM_COMMAND(
	TARGET
	${PROJECT_NAME}
	PRE_BUILD
	COMMAND xcopy ARGS /s/y ${CMAKE_SOURCE_DIR_VS}\\extlibs\\bin\\x86\\sfml2\\\$\(Configuration\)
							\$\(SolutionDir\)YAPOG.Client\\bin\\\$\(Configuration\)
	COMMAND xcopy ARGS /s/y ${CMAKE_SOURCE_DIR_VS}\\extlibs\\bin\\x86\\sfml2\\\$\(Configuration\)
							\$\(SolutionDir\)YAPOG.Server\\bin\\\$\(Configuration\)
	COMMENT "Copy the SFML2 DLL files in the good directory !"
)

ADD_CUSTOM_COMMAND(
	TARGET
	${PROJECT_NAME}
	PRE_BUILD
	COMMAND xcopy ARGS /s/y ${CMAKE_SOURCE_DIR_VS}\\extlibs\\bin\\x86\\postgresql
							\$\(SolutionDir\)\\YAPOG.Client\\bin\\\$\(Configuration\)
	COMMAND xcopy ARGS /s/y ${CMAKE_SOURCE_DIR_VS}\\extlibs\\bin\\x86\\postgresql
							\$\(SolutionDir\)\\YAPOG.Server\\bin\\\$\(Configuration\)
	COMMENT "Copy the Postgre DLL files in the good directory !"
)
endif()
